# myHealthReportGenerator

./: .gitignore  CHANGELOG.md  README.md  build.gradle  pyproject.toml  requirements.txt  settings.gradle
data/: Health_Analytics_Database_DailySummary.xlsx  MyFitnessPal_parsed_data.xlsx  events.csv
data/garmin/: Activities.csv  Calories.csv  Steps.csv
data/processed/: master_dataframe.csv
data/withings/: weight-from-2023.csv  weight.csv
output/: body_composition_metrics.csv  monthly_body_composition.csv  phase_summary.csv
src/: generate_report.py
src/health_report/analysis/: body_composition.py  nutrition.py
src/health_report/common/: config.py  paths.py
src/health_report/loaders/: events_loader.py  garmin_loader.py  mfp_loader.py  withings_loader.py
src/health_report/preprocessing/: merge_daily.py
src/health_report/report/: pdf_chapter4.py
src/health_report/visualization/: chapter4.py  chapter5.py  style.py
