[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "my-health-gen"
version = "0.6.1"
description = "Personal weight regulation report generator"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "openpyxl",
    "matplotlib",
    "reportlab",
]

[project.scripts]
generate-health-report = "generate_report:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["generate_report"]
